0.6.0
* rdg: new module: Distributed Random Generator (2007-12-27)
* tst: new word ?str for module testing strings (2007-12-24)
* tis: new word tis-match-set
* tis: new word tis-scan-set
* chs: chs-char? return false in place of an exception if outside range
* enm: new module: Enumeration (2007-12-12)
* Stack notation changed to ANSish (2007-12-06)
! stc: structures are changed to ANS structures (2007-12-04)
* est: new module: String with escaped characters (2007-12-03)
* xos: new module: XML/HTML writer (2007-11-22)
* xis: new module: XML/HTML reader (2007-11-22)
* tos: new words: tos-msc@,tos-msc! (2007-11-20)
* stt: new module: Stringtable (2007-11-19)
* dos: new module: DateTime output stream (2007-11-18)
* hct: support for zero-length key
* str: new words: str-data@,str-length!  (2007-11-14)
* gmo: new module: Gettexts mo-file (2007-11-12)
* hnt: bug fix (2007-11-11)
* hci: extends hni
* hni: new module: Hash table base iterator (2007-11-10)
* hct: extends hnt
* hnt: new module: Hash table base module (2007-11-09)
* hcn: extends hnn
* hnn: new module: Hash Table base node (2007-11-09)
* msc: new module: Message Catalog (2007-11-09)
* tis: new word: tis-iscan-string (2007-10-17)
* tis: new word: tis-set-reader (2007-10-17)
* tis: new word: tis-read-all (2007-10-08)
* str: new word: str+columns (2007-07-17)
* arg: new module: Arguments parser (2007-07-09)
* config.fs: 0e0->0E+0, 1e0->1E+0, 2e0->2E+0 (2007-06-25)
0.5.0
* config.fs: #bits/byte uses environment (2007-06-07)
* config.fs: sys.eol -> end-of-line, sys.bits-in-byte -> #bits/byte,
  sys.bits-in-char -> #bits/char, sys.bits-in-cell -> #bits/cell
* config.fs: new word char/ (2007-06-07)
* config.fs: sys.bigendian -> bigendian? (2007-06-05)
* sh2: new module (SHA-256) (2007-06-05)
* config.fs: new word ?free for freeing memory blocks (2007-05-21)
* rgx: new module (Regular Expression) (2007-05-10)
* nfe: new module (Non-deterministic finite automata expression) (2007-05-08)